unpackaged/objects/Residential_College_Master__c.object
<CustomObject>
    <fields>
        <fullName>RC_Exec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RC Exec</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Residential_College_Master_RC_Exec</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vice_Rector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vice Rector</label>
        <lookupFilter>
            <active>false</active>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Residential_College_Master_Vice_Rector</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Residential College Master</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Residential College Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Residential College Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>